OAIBOX specific features and optimizations

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
@@ -184,9 +184,11 @@ MACRLCs = (
   num_cc                      = 1;
   tr_s_preference             = "local_L1";
   tr_n_preference             = "local_RRC";
-  pusch_TargetSNRx10          = 150;
+  pusch_TargetSNRx10          = 300;
   pucch_TargetSNRx10          = 200;
+  pusch_FailureThres          = 1000;
   ulsch_max_frame_inactivity  = 0;
+  ul_max_mcs                  = 28;
 }
 );
 
@@ -197,6 +199,7 @@ L1s = (
   prach_dtx_threshold   = 120;
   pucch0_dtx_threshold  = 100;
   ofdm_offset_divisor   = 8; #set this to UINT_MAX for offset 0
+  max_ldpc_iterations   = 20;
 }
 );
 
