--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.usrpn300.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.usrpn300.conf
@@ -11,14 +11,14 @@ gNBs =
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
     tracking_area_code  =  1;
-    plmn_list = ({ mcc = 001; mnc = 01; mnc_length = 2; snssaiList = ({ sst = 1; sd = 1; }) });
+    plmn_list = ({ mcc = 001; mnc = 01; mnc_length = 2; snssaiList = ({ sst = 1;}) });
 
     nr_cellid = 12345678L;
 
     ////////// Physical parameters:
 
     pdsch_AntennaPorts_XP = 2;
-    pusch_AntennaPorts    = 2;
+    pusch_AntennaPorts    = 1;
     do_CSIRS              = 1;
     do_SRS                = 1;
 
@@ -187,7 +187,7 @@ MACRLCs = (
   num_cc                      = 1;
   tr_s_preference             = "local_L1";
   tr_n_preference             = "local_RRC";
-  pusch_TargetSNRx10          = 300;
+  pusch_TargetSNRx10          = 380;
   pucch_TargetSNRx10          = 200;
   pusch_FailureThres          = 1000;
   ulsch_max_frame_inactivity  = 0;
