OAIBOX specific features and optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2312,6 +2312,7 @@ add_executable(nr-softmodem
   ${OPENAIR1_DIR}/PHY/TOOLS/phy_scope_interface.c
   ${T_SOURCE}
   ${SHLIB_LOADER_SOURCES}
+  ${OPENAIR_DIR}/executables/oaibox_data_export.c
   )
 
 target_link_libraries(nr-softmodem PRIVATE
