OAIBOX specific features and optimizations

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.usrpn300.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.usrpn300.conf
@@ -11,7 +11,7 @@ gNBs =
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
     tracking_area_code  =  1;
-    plmn_list = ({ mcc = 001; mnc = 01; mnc_length = 2; snssaiList = ({ sst = 1; sd = 1; }) });
+    plmn_list = ({ mcc = 001; mnc = 01; mnc_length = 2; snssaiList = ({ sst = 1;}) });
 
     nr_cellid = 12345678L;
 
@@ -201,6 +201,7 @@ L1s = (
   tr_n_preference = "local_mac";
   prach_dtx_threshold = 120;
   pucch0_dtx_threshold = 80;
+  max_ldpc_iterations   = 20;
 }
 );
 
