OAIBOX specific features and optimizations

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/oaibox_x2xx.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/oaibox_x2xx.conf
@@ -1,4 +1,4 @@
-Active_gNBs = ( "gNB-OAI");
+Active_gNBs = ("gNB-OAI");
 Asn1_verbosity = "none";
 
 gNBs = (
@@ -21,16 +21,12 @@ gNBs = (
   );
 
   nr_cellid = 12345678L;
+  pdsch_AntennaPorts_XP = 1;
+  pusch_AntennaPorts = 1;
   do_CSIRS = 1;
   do_SRS = 1;
   sib1_tda = 1;
-
-  pdcch_ConfigSIB1 = (
-  {
-    controlResourceSetZero = 12;
-    searchSpaceZero = 0;
-  }
-  );
+  ul_prbblacklist = "";
 
   servingCellConfigCommon = (
   {
@@ -66,8 +62,8 @@ gNBs = (
     rsrp_ThresholdSSB = 19;
     prach_RootSequenceIndex_PR = 2;
     prach_RootSequenceIndex = 1;
-    msg1_SubcarrierSpacing = 1,
-    restrictedSetConfig = 0,
+    msg1_SubcarrierSpacing = 1;
+    restrictedSetConfig = 0;
     msg3_DeltaPreamble = 1;
     p0_NominalWithGrant = -90;
     pucchGroupHopping = 0;
@@ -109,7 +105,7 @@ gNBs = (
     GNB_IPV4_ADDRESS_FOR_NG_AMF = "192.168.70.129/24";
     GNB_INTERFACE_NAME_FOR_NGU = "demo-oai";
     GNB_IPV4_ADDRESS_FOR_NGU = "192.168.70.129/24";
-    GNB_PORT_FOR_S1U = 2152; # Spec 2152
+    GNB_PORT_FOR_S1U = 2152;
   }
 }
 );
@@ -122,7 +118,6 @@ MACRLCs = (
   pusch_TargetSNRx10 = 300;
   pucch_TargetSNRx10 = 200;
   pusch_FailureThres = 1000;
-  ulsch_max_frame_inactivity = 10;
   dl_min_mcs = 0;
   dl_max_mcs = 28;
   ul_min_mcs = 0;
@@ -142,7 +137,7 @@ L1s = (
 
 RUs = (
 {
-  local_rf = "yes"
+  local_rf = "yes";
   nb_tx = 1;
   nb_rx = 1;
   att_tx = 12;
@@ -151,7 +146,7 @@ RUs = (
   max_pdschReferenceSignalPower = -27;
   max_rxgain = 114;
   eNB_instances  = [0];
-  bf_weights = [0x00007fff, 0x0000];
+  bf_weights = (0x00007fff, 0x0000);
   clock_src = "internal";
 }
 );
