--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/oaibox_x3xx.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/oaibox_x3xx.conf
@@ -1,4 +1,4 @@
-Active_gNBs = ( "gNB-OAI");
+Active_gNBs = ("gNB-OAI");
 Asn1_verbosity = "none";
 
 gNBs = (
@@ -22,18 +22,11 @@ gNBs = (
 
   nr_cellid = 12345678L;
   pdsch_AntennaPorts_XP = 2;
-  pusch_AntennaPorts    = 2;
-  do_CSIRS              = 1;
-  do_SRS                = 1;
+  pusch_AntennaPorts = 2;
+  do_CSIRS = 1;
+  do_SRS = 1;
   sib1_tda = 1;
-  ul_prbblacklist       = "135,136,137,138"
-
-  pdcch_ConfigSIB1 = (
-  {
-    controlResourceSetZero = 12;
-    searchSpaceZero = 0;
-  }
-  );
+  ul_prbblacklist = "135,136,137,138";
 
   servingCellConfigCommon = (
   {
@@ -69,8 +62,8 @@ gNBs = (
     rsrp_ThresholdSSB = 19;
     prach_RootSequenceIndex_PR = 2;
     prach_RootSequenceIndex = 1;
-    msg1_SubcarrierSpacing = 1,
-    restrictedSetConfig = 0,
+    msg1_SubcarrierSpacing = 1;
+    restrictedSetConfig = 0;
     msg3_DeltaPreamble = 1;
     p0_NominalWithGrant = -90;
     pucchGroupHopping = 0;
@@ -112,7 +105,7 @@ gNBs = (
     GNB_IPV4_ADDRESS_FOR_NG_AMF = "192.168.70.129/24";
     GNB_INTERFACE_NAME_FOR_NGU = "demo-oai";
     GNB_IPV4_ADDRESS_FOR_NGU = "192.168.70.129/24";
-    GNB_PORT_FOR_S1U = 2152; # Spec 2152
+    GNB_PORT_FOR_S1U = 2152;
   }
 }
 );
@@ -125,7 +118,6 @@ MACRLCs = (
   pusch_TargetSNRx10 = 150;
   pucch_TargetSNRx10 = 200;
   pusch_FailureThres = 1000;
-  ulsch_max_frame_inactivity = 10;
   dl_min_mcs = 0;
   dl_max_mcs = 28;
   ul_min_mcs = 0;
@@ -145,7 +137,7 @@ L1s = (
 
 RUs = (
 {
-  local_rf = "yes"
+  local_rf = "yes";
   nb_tx = 2;
   nb_rx = 2;
   att_tx = 0;
@@ -154,9 +146,9 @@ RUs = (
   max_pdschReferenceSignalPower = -27;
   max_rxgain = 75;
   eNB_instances  = [0];
-  bf_weights = [0x00007fff, 0x0000];
+  bf_weights = (0x00007fff, 0x0000);
   clock_src = "internal";
-  sdr_addrs = "mgmt_addr=192.168.10.2,addr=192.168.10.2,clock_source=internal,time_source=internal"
+  sdr_addrs = "mgmt_addr=192.168.10.2,addr=192.168.10.2,clock_source=internal,time_source=internal";
 }
 );
 
