OAIBOX specific features and optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2036,6 +2036,7 @@ add_executable(nr-softmodem
   ${OPENAIR_DIR}/common/utils/nr/nr_common.c
   ${PHY_INTERFACE_DIR}/queue_t.c
   ${OPENAIR1_DIR}/PHY/TOOLS/phy_scope_interface.c
+  ${OPENAIR_DIR}/executables/oaibox_data_export.c
   )
 
 target_link_libraries(nr-softmodem PRIVATE
